--- a/un.css
+++ b/un.css
@@ -6,7 +6,7 @@ body {
 
 h1{
 font-size: 250%;
-color: #273746;
+color: #7B241C;
 text-align: center;
 }
 
@@ -17,5 +17,5 @@ padding-left: 15px;
 }
 
 p{
-color: #1B2631;
+color:#7B241C;
 }
