--- a/un.css
+++ b/un.css
@@ -1,5 +1,5 @@
 body {
- background-image: linear-gradient(#FFFFFF,#7B241C);
+ background-image: linear-gradient(#FFFFFF,#ded3ff);
  font-family: American Typewriter, serif;
  font-size: 100%
 }
