--- a/un.css
+++ b/un.css
@@ -1,6 +1,6 @@
 body {
  background-image: linear-gradient(#FFFFFF,#ded3ff);
- font-family: American Typewriter, serif;
+ font-family: Columbus, serif;
  font-size: 100%
 }
 
