--- a/un.css
+++ b/un.css
@@ -1,5 +1,5 @@
 body {
- background-image: linear-gradient(#000000,#d3fff6);
+ background-image: linear-gradient(#ceffe6,#d3fff6);
  font-family: Columbus, serif;
  font-size: 100%
 }
