--- a/un.css
+++ b/un.css
@@ -6,16 +6,16 @@ body {
 
 h1{
 font-size: 250%;
-color: #d3fff6;
+color: #224b9e;
 text-align: center;
 }
 
 h2{
 font-size:150%;
-color:#d3fff6;
+color:#224b9e;
 padding-left: 15px;
 }
 
 p{
-color:#d3fff6;
+color:#224b9e;
 }
